--- a/nediumD.css
+++ b/nediumD.css
@@ -372,7 +372,7 @@ ul li {
   color: #100db8;
 }
 .section-content img {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: block;
   margin: auto;
 
